# sys-info-rs

./: .gitignore  Cargo.toml  README.md  build.rs  go-rust-docker.sh  lib.rs
.github/workflows/: rust-matrix.yml  rust-reusable.yml  rust.yml
src/: lib.rs  main.rs  util.rs
test/: Cargo.toml
test/src/: main.rs
