[package]
name = "sys_info_rs"
version = "1.1.0"
authors = ["Pieter Smit <diepes@github.com>", "Siyu Wang <FillZpp.pub@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["system", "cpu", "disk", "memory", "information"]
repository = "https://github.com/diepes/sys-info-rs"
documentation = "https://docs.rs/sys-info"
description = """
Get system information in Rust.

For now it supports Linux, Mac OS X, illumos, Solaris, FreeBSD, OpenBSD, and Windows.
"""

links = "info"
build = "build.rs"

[lib]
name = "sys_info_rs"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
doc = false

[build-dependencies]
cc = "1"

[dependencies]
libc = "0.2.29"
serde = {version = "1.0.163", features = ["derive"]}

# sys_info_rs = { path = "src/lib.rs" }
# sys-info-rs = { git = "https://github.com/diepes/sys-info-rs.git" }
